# dp-fedaug

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data_loader/: __init__.py
data_loader/braintumor/: brain_tumor.py
data_loader/cifar/: cifar10.py
data_loader/mnist/: mnist.py
experiments/cifar/: run_cifar_ablation_dpddpm.py  run_cifar_dpfedaug_experiments.py  run_cifar_saliency_dpddpm_style.py
experiments/mnist/: run_mnist_dpfedaug_experiments.py  run_mnist_fedprox_experiments.py
models/: __init__.py  metrics.py  train_and_generate.py
models/braintumor/: brain_tumor_cnn.py  train_braintumor_vae.py  vae_brain2.py  vae_braintumor.py
models/cifar/: cifar_cnn.py  train_cifar_vae.py  vae_cifar.py  vae_cifar_pp.py
models/mnist/: mnist_cnn.py  train_mnist_vae.py  vae_mnist.py
notebooks/braintumor/: 01_eda.ipynb  02_dp_vae.ipynb  03_dp_vae_quality_eval.ipynb  04_dp2_vae_paper.ipynb
notebooks/braintumor/experiments/brain_tumor_syn/scores/: dp_syn_scores.json  syn_scores.json
notebooks/cifar/: 01_dp_vae_pixel.ipynb  02_saliency_xai.ipynb  03_dp_vae_resnet_embeddings.ipynb  04_dp_ddpm_imagenet_pretrained.ipynb  05_ablation_wandb_report.ipynb
notebooks/mnist/: 01_dp_vae.ipynb  02_small_dataset_baseline.ipynb  03_synthetic_quality_check.ipynb  04_saliency_xai.ipynb  05_localdpmod_param_search.ipynb
strategy/dpfedaug/: client_app.py  server_app.py  strategy.py  task.py
strategy/fedprox/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
visual/: data.py  export_all.py  report.py  study_cifar_seeded.py  study_mnist_dpfedaug.py  study_mnist_exploration.py  study_mnist_fedprox.py  study_mnist_seeded.py  thesis_style.py
